--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,9 @@ main h2 {
 .list-actions-button-details,
 .list-actions-button-edit,
 .list-actions-button-delete,
-.button-add {
+.button-add,
+.form-button-submit,
+.form-button-cancel {
     border: none;
     border-radius: 5px;
     color: white;
@@ -131,20 +133,78 @@ main h2 {
 .list-actions-button-edit:hover {
     background-color: #f1c40f;
 }
+.form-button-cancel,
 .list-actions-button-delete {
     background-color: #c0392b;
 }
-
+.form-button-cancel:hover,
 .list-actions-button-delete:hover {
     background-color: #e74c3c;
 }
-.button-add {
+.button-add,
+.form-button-submit,
+.form-button-cancel {
     padding: 0.5rem 1rem;
 }
-.button-add {
+.button-add,
+.form-button-submit {
     background-color: #27ae60;
 }
 
-.button-add:hover {
+.button-add:hover,
+.form-button-submit:hover {
     background-color: #2ecc71;
+}
+button, 
+input, 
+select, 
+textarea { 
+    font-family: inherit; 
+    font-size: 100%; 
+    box-sizing: border-box; 
+    padding: 0; margin: 0; 
+} 
+
+textarea { 
+    overflow: auto; 
+}
+.form {
+    margin-left: 2rem;
+    width: 300px;
+}
+.form select, 
+.form input[type="text"],
+.form input[type="number"],
+.form input[type="datetime-local"],
+.form input[type="email"] {
+    border: 1px solid #7f8c8d;
+    color:#2c3e50;
+    border-radius: 5px;
+    padding: 0.5rem;
+    width: 100%;
+}
+.form label {
+    display: block;
+    margin-bottom: 0.5em;
+}
+.form-group {
+    margin-bottom: 1rem;
+}
+abbr[title='required'] {
+    color: #c0392b;
+}
+.form-buttons{
+    margin-top: 2rem;
+}
+.form-button-submit,
+.form-button-cancel {
+    width: 100%;
+}
+.form-button-cancel {
+    box-sizing: border-box;
+    display: block;
+}
+
+.form-button-submit {
+    margin-bottom: 0.5rem;
 }
