--- a/css/style.css
+++ b/css/style.css
@@ -2,113 +2,110 @@ html {
     background-color: #ecf0f1;
     font-family: sans-serif;
 }
-body {
-    min-width: 600px;
-  }
-  header, 
-  main, 
-  footer {
-      background-color: white;
-  }
 
-  header,
-  main,
-  footer,
-  nav {
-      margin: 1rem;
-  }
-  header, 
-footer {
+body {
+    min-width: 360px;
+}
+
+header, main, footer {
+    background-color: white;
+}
+
+header, main, footer, nav {
+    margin: 1rem;
+}
+
+header, footer {
     background-color: #07740c;
     color: white;
     padding: 1rem;
 }
+
 header {
-    overflow: auto;
-}
-header h1 {
-    float: left;
+    display: flex;
+    justify-content: space-between;
 }
 
 header img {
-    float: right;
     width: 150px;
 }
+
 nav {
     background-color: #bdc3c7;
 }
+
 nav ul {
+    display: flex;
     padding: 0;
-    overflow: hidden;
     list-style-type: none;
 }
-nav ul li {
-    float: left;
-}
+
 nav ul li a {
     display: inline-block;
     color: #2c3e50;
     padding: 1rem 2rem;
     text-decoration: none;
 }
+
 nav ul li a:hover {
     background-color: #d35400;
     color: #ecf0f1;
 }
+
 nav ul li a.active {
     background-color: #95a5a6;
     color: #ecf0f1;
 }
+
 main {
     padding: 1.5rem;
 }
+
 footer {
     text-align: center;
 }
+
 main h2 {
     border-bottom: 1px solid #7f8c8d;
     margin-bottom: 2rem;
 }
+
 .table-list {
     border-collapse: collapse;
-    color:#2c3e50;
+    color: #2c3e50;
     width: 100%;
 }
-.table-list,
-.table-list th,
-.table-list td {
+
+.table-list, .table-list th, .table-list td {
     border: 1px solid #bdc3c7;
 }
-.table-list th,
-.table-list td {
+
+.table-list th, .table-list td {
     padding: 0.5rem;
 }
-.table-list th,
-.table-list tbody tr:nth-child(even) {
+
+.table-list th, .table-list tbody tr:nth-child(even) {
     background-color: #ecf0f1;
 }
+
 .list-actions {
     margin: 0;
     text-align: center;
     list-style-type: none;
     padding: 0;
 }
+
 .list-actions li {
     display: inline-block;
 }
-.list-actions-button-details,
-.list-actions-button-edit,
-.list-actions-button-delete {
+
+.list-actions-button-details, .list-actions-button-edit, .list-actions-button-delete {
     display: inline-block;
     width: 75px;
     padding: 0.25rem 0.5rem;
 }
-.list-actions-button-details,
-.list-actions-button-edit,
-.list-actions-button-delete,
-.button-add,
-.form-button-submit,
-.form-button-cancel {
+
+.list-actions-button-details, .list-actions-button-edit, .list-actions-button-delete, .button-add, .form-button-submit, .form-button-cancel {
     border: none;
     border-radius: 5px;
     color: white;
@@ -116,16 +113,19 @@ main h2 {
     text-align: center;
     font-size: 0.8rem;
 }
-.list-actions-button-details,
-.list-actions-button-edit {
+
+.list-actions-button-details, .list-actions-button-edit {
     margin-right: 1rem;
 }
+
 .list-actions-button-details {
-    background-color: #2980b9;    
+    background-color: #2980b9;
 }
+
 .list-actions-button-details:hover {
     background-color: #3498db;
 }
+
 .list-actions-button-edit {
     background-color: #f39c12;
 }
@@ -133,73 +133,76 @@ main h2 {
 .list-actions-button-edit:hover {
     background-color: #f1c40f;
 }
-.form-button-cancel,
-.list-actions-button-delete {
+
+.form-button-cancel, .list-actions-button-delete {
     background-color: #c0392b;
 }
-.form-button-cancel:hover,
-.list-actions-button-delete:hover {
+
+.form-button-cancel:hover, .list-actions-button-delete:hover {
     background-color: #e74c3c;
 }
-.button-add,
-.form-button-submit,
-.form-button-cancel {
+
+.button-add, .form-button-submit, .form-button-cancel {
     padding: 0.5rem 1rem;
 }
-.button-add,
-.form-button-submit {
+
+.button-add, .form-button-submit {
     background-color: #27ae60;
 }
 
-.button-add:hover,
-.form-button-submit:hover {
+.button-add:hover, .form-button-submit:hover {
     background-color: #2ecc71;
 }
-button, 
-input, 
-select, 
-textarea { 
-    font-family: inherit; 
-    font-size: 100%; 
-    box-sizing: border-box; 
-    padding: 0; margin: 0; 
-} 
 
-textarea { 
-    overflow: auto; 
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
+
+textarea {
+    overflow: auto;
+}
+
 .form {
-    margin-left: 2rem;
-    width: 300px;
+    display: grid;
+    grid-template-columns: 150px 300px;
+    row-gap: 1rem;
 }
-.form select, 
-.form input[type="text"],
-.form input[type="number"],
-.form input[type="datetime-local"],
-.form input[type="email"] {
+
+.form select, .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"] {
     border: 1px solid #7f8c8d;
-    color:#2c3e50;
+    color: #2c3e50;
     border-radius: 5px;
     padding: 0.5rem;
     width: 100%;
 }
+
 .form label {
     display: block;
     margin-bottom: 0.5em;
 }
+
 .form-group {
     margin-bottom: 1rem;
 }
+
 abbr[title='required'] {
     color: #c0392b;
 }
-.form-buttons{
+
+.form-buttons {
     margin-top: 2rem;
+    grid-column-start: 1;
+    grid-column-end: -1;
 }
-.form-button-submit,
-.form-button-cancel {
+
+.form-button-submit, .form-button-cancel {
     width: 100%;
 }
+
 .form-button-cancel {
     box-sizing: border-box;
     display: block;
@@ -207,4 +210,43 @@ abbr[title='required'] {
 
 .form-button-submit {
     margin-bottom: 0.5rem;
+}
+
+@media all and (max-width: 720px) {
+    header {
+        flex-direction: column;
+    }
+    header h1 {
+        text-align: center;
+    }
+    header img {
+        align-self: center;
+    }
+    nav ul {
+        flex-wrap: wrap;
+    }
+    nav ul li {
+        flex-basis: 50%;
+        text-align: center;
+    }
+    nav ul li a {
+        display: block;
+    }
+    .form {
+        grid-template-columns: 1fr;
+        row-gap: unset;
+        margin-left: unset;
+    }
+    .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"], .form select {
+        margin-bottom: 1rem;
+    }
+}
+
+@media all and (max-width: 400px) {
+    body, nav, nav ul, header, main, footer {
+        margin: 0;
+    }
+    nav ul li {
+        flex-basis: 100%;
+    }
 }
