--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,9 @@ textarea {
 
 .form {
     display: grid;
-    grid-template-columns: 150px 300px;
+    grid-template-columns: 150px 300px 1fr;
     row-gap: 1rem;
+    column-gap: 1rem;
 }
 
 .form select, .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"] {
@@ -195,8 +196,7 @@ abbr[title='required'] {
 
 .form-buttons {
     margin-top: 2rem;
-    grid-column-start: 1;
-    grid-column-end: -1;
+    grid-column: 1 / span 2;
 }
 
 .form-button-submit, .form-button-cancel {
@@ -210,6 +210,17 @@ abbr[title='required'] {
 
 .form-button-submit {
     margin-bottom: 0.5rem;
+}
+
+.errors-text {
+    font-size: 0.85em;
+    line-height: 2.25rem;
+    color: #c0392b;
+  }
+
+  .form input.error-input,
+.form select.error-input {
+  border: 3px solid #e74c3c
 }
 
 @media all and (max-width: 720px) {
@@ -237,9 +248,14 @@ abbr[title='required'] {
         row-gap: unset;
         margin-left: unset;
     }
-    .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"], .form select {
+
+    .form .errors-text {
         margin-bottom: 1rem;
     }
+    .form-buttons {
+        grid-column: 1 / span 1; 
+    }
+
 }
 
 @media all and (max-width: 400px) {
