--- a/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOSIR Warszawa</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="application/javascript" src="../js/validationCommon.js"></script>
+    <script type="application/javascript" src="/js/validationCommon.js"></script>
 </head>
 <body>
 <header>
