--- a/tin-projekt-wierzbicki-s9405/views/pages/player/form.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/pages/player/form.ejs
@@ -1,29 +1,66 @@
 <%- include('../../fragments/header.ejs') %>
     <main>
-        <script type="application/javascript" src="../js/validationPlayerForm.js"></script>
+        <script type="application/javascript" src="/js/validationPlayerForm.js"></script>
 
-        <h2>Nowy gracz</h2>
-        <form class="form" novalidate onsubmit="return validateForm()">
+        <h2><%= pageTitle %></h2>
+        <form class="form" method="post" action="<%=formAction%>" novalidate onsubmit="return validateForm();">
+            <input type="hidden" name="_id" value="<%= player._id %>">
 
             <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="firstName" id="firstName" placeholder="2-20 znaków" />
+            <input type="text" name="firstName" id="firstName" placeholder="2-20 znaków" value="<%= player.firstName %>"
+            <%= (formMode == 'showDetails') ? 'disabled' : '' %>/>
             <span id="errorFirstName" class="errors-text"></span>
 
             <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="lastName" id="lastName" placeholder="2-20 znaków" />
+            <input type="text" name="lastName" id="lastName" placeholder="2-20 znaków" value="<%= player.lastName %>"
+            <%= (formMode == 'showDetails') ? 'disabled' : '' %>/>
             <span id="errorLastName" class="errors-text"></span>
 
             <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="email" name="email" id="email" placeholder="np. nazwa@domena.pl" />
+            <input type="email" name="email" id="email" placeholder="np. nazwa@domena.pl" value="<%= player.email %>"
+            <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
             <span id="errorEmail" class="errors-text"></span>
 
-            <div class="form-buttons">
-                <p id="errorsSummary" class="errors-text"></p>
-                <input type="submit" value="Dodaj" class="form-button-submit" />
-                <a href="/players" class="form-button-cancel">Anuluj</a>
-            </div>
+            <% if (formMode == 'showDetails') { %>
+                <div class="section-buttons">
+                    <a href="/players/edit/<%= player._id %>" class="list-actions-button-edit">Edytuj</a>
+                </div>
+            <% } %>
 
-        </form>
+        
+        <% if (formMode == 'showDetails' || formMode == 'edit') { %>
+        <h2>Szczegóły eventów</h2>
+        <table class="table-list">
+            <thead>
+                <tr>
+                    <th>Nazwa obiektu</th>
+                    <th>Początek</th>
+                    <th>Koniec</th>
+                    <th>Ilość graczy</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% for (let e of player.events) { %>
+                    <tr>
+                        <td><%= e.playingField.name %></td>
+                        <td><%= e.beginTime.toLocaleString() %></td>
+                        <td><%= e.endTime.toLocaleString() %></td>
+                        <td><%= e.maxNumberOfPlayer %></td>
+                    </tr>
 
+                <% } %>
+            </tbody>
+        </table>
+        <% } %>
+        <div class="form-buttons">
+            <p id="errorsSummary" class="errors-text"></p>
+            <% if (formMode != 'showDetails') { %>
+                <input class="form-button-submit" type="submit" value="<%=btnLabel%>" />
+                <a class="form-button-cancel" href="/players">Anuluj</a>
+            <% } else { %>
+                <a class="form-button-cancel" href="/players">Powrót</a>
+            <% } %>
+        </div>
+    </form>
     </main>
 <%- include('../../fragments/footer.ejs') %>
