--- a/tin-projekt-wierzbicki-s9405/views/pages/player/list.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/pages/player/list.ejs
@@ -11,61 +11,20 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Jan</td>
-                    <td>Kowalski</td>
-                    <td>jan.kowalski@gmail.com</td>
-                    <td>
-                        <ul class="list-actions">
-                            <li>
-                                <a href="players/details" class="list-actions-button-details">Szczegóły</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-edit">Edytuj</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-delete">Usuń</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Pawel</td>
-                    <td>Nowak</td>
-                    <td>p.nowal@gmail.com</td>
-                    <td>
-                        <ul class="list-actions">
-                            <li>
-                                <a href="" class="list-actions-button-details">Szczegóły</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-edit">Edytuj</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-delete">Usuń</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Grzegorz</td>
-                    <td>Brzeczyszczykiewicz</td>
-                    <td>g.b@gmail.com</td>
-                    <td>
-                        <ul class="list-actions">
-                            <li>
-                                <a href="" class="list-actions-button-details">Szczegóły</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-edit">Edytuj</a>
-                            </li>
-                            <li>
-                                <a href="" class="list-actions-button-delete">Usuń</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
+                <% for (let player of players) { %>
+                    <tr>
+                        <td><%= player.firstName %></td>
+                        <td><%= player.lastName %></td>
+                        <td><%= player.email %></td>
+                        <td>
+                            <ul class="list-actions">
+                                <li><a href="/players/details/<%=player._id%>" class="list-actions-button-details">Szczegóły</a></li>
+                                <li><a href="/players/edit/<%=player._id%>" class="list-actions-button-edit">Edytuj</a></li>
+                                <li><a href="/players/delete/<%=player._id%>" class="list-actions-button-delete">Usuń</a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                <% } %>
             </tbody>
         </table>
         <div class="form-buttons">
