--- a/tin-projekt-wierzbicki-s9405/views/pages/player/form.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/pages/player/form.ejs
@@ -7,19 +7,34 @@
             <input type="hidden" name="_id" value="<%= player._id %>">
 
             <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="firstName" id="firstName" placeholder="2-20 znaków" value="<%= player.firstName %>"
+            <input class="<%= validationErrors.find(e => e.path.includes('firstName')) ? 'error-input' : '' %>" 
+            type="text" name="firstName" id="firstName" placeholder="2-20 znaków" value="<%= player.firstName %>"
             <%= (formMode == 'showDetails') ? 'disabled' : '' %>/>
-            <span id="errorFirstName" class="errors-text"></span>
+            <span id="errorFirstName" class="errors-text">
+                <% if (validationErrors.find(e => e.path.includes('firstName'))) { %>
+                    <%= validationErrors.find(e => e.path.includes('firstName')).message %>
+                <% } %>
+            </span>
 
             <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="lastName" id="lastName" placeholder="2-20 znaków" value="<%= player.lastName %>"
+            <input class="<%= validationErrors.find(e => e.path.includes('lastName')) ? 'error-input' : '' %>" 
+            type="text" name="lastName" id="lastName" placeholder="2-20 znaków" value="<%= player.lastName %>"
             <%= (formMode == 'showDetails') ? 'disabled' : '' %>/>
-            <span id="errorLastName" class="errors-text"></span>
+            <span id="errorLastName" class="errors-text">
+                <% if (validationErrors.find(e => e.path.includes('lastName'))) { %>
+                    <%= validationErrors.find(e => e.path.includes('lastName')).message %>
+                <% } %>
+            </span>
 
             <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="email" name="email" id="email" placeholder="np. nazwa@domena.pl" value="<%= player.email %>"
+            <input class="<%= validationErrors.find(e => e.path.includes('email')) ? 'error-input' : '' %>"
+            type="email" name="email" id="email" placeholder="np. nazwa@domena.pl" value="<%= player.email %>"
             <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
-            <span id="errorEmail" class="errors-text"></span>
+            <span id="errorEmail" class="errors-text">
+                <% if (validationErrors.find(e => e.path.includes('email'))) { %>
+                    <%= validationErrors.find(e => e.path.includes('email')).message %>
+                <% } %>
+            </span>
 
             <% if (formMode == 'showDetails') { %>
                 <div class="section-buttons">
@@ -28,7 +43,7 @@
             <% } %>
 
         
-        <% if (formMode == 'showDetails' || formMode == 'edit') { %>
+        <% if (formMode == 'showDetails') { %>
         <h2>Szczegóły eventów</h2>
         <table class="table-list">
             <thead>
