--- a/tin-projekt-wierzbicki-s9405/views/index.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/index.ejs
@@ -1,8 +1,7 @@
 <%- include('./fragments/header.ejs') %>
     <main>
         <h2>Strona główna</h2>
-        <p>Witamy na stronie głównej DOSIR Warszawa. Dzięki niej możesz zarezerwować obiekt sportowy, jak również
-            znaleść interesujące Cię wydarzenie i dołączyć do niego.</p>
+        <p>Witamy na stronie głównej DOSIR Warszawa. Dzięki niej możesz zarezerwować obiekt sportowy.</p>
     </main>
     
 <%- include('./fragments/footer.ejs') %>
