--- a/tin-projekt-wierzbicki-s9405/public/css/style.css
+++ b/tin-projekt-wierzbicki-s9405/public/css/style.css
@@ -29,6 +29,16 @@ header {
 header img {
     width: 150px;
 }
+h5 {
+    margin: 1rem;
+}
+.login-form form, label, input{
+    margin: 1rem;
+}
+
+.login-span {
+    margin: 1rem;
+}
 
 nav {
     background-color: #bdc3c7;
@@ -175,7 +185,7 @@ textarea {
     column-gap: 1rem;
 }
 
-.form select, .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"] {
+.form select, .form input[type="text"], .form input[type="number"], .form input[type="datetime-local"], .form input[type="email"], .form input[type="password"] {
     border: 1px solid #7f8c8d;
     color: #2c3e50;
     border-radius: 5px;
