--- a/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/fragments/header.ejs
@@ -13,10 +13,30 @@
     <h1>DOSIR Warszawa</h1>
     <img src="/images/logo.png" alt="DOSIR Warszawa Logo">
 </header>
+<% if(!loggedUser) { %>
+    <div id="login">
+        <h5>Logowanie</h5>
+        <form class="login-form" method="post" action="/login" novalidate>
+            <label for="loginEmail">Email:</label>
+            <input type="email" id="loginEmail" name="email">
+
+            <label for="loginPassword">Hasło:</label>
+            <input type="password" id="loginPassword" name="password">
+
+            <input class="list-actions-button-edit" type="submit" value="Zaloguj się">
+            <span id="loginErrors" class="errors-text"><%= loginError ? loginError : ''%></span>
+        </form>
+    </div>
+<% } else { %>
+    <span class="login-span">Jesteś zalogowany jako: <%=loggedUser.firstName + " " + loggedUser.lastName%></span>
+    <a class="list-actions-button-edit" href="/logout">Wyloguj się</a>
+<% } %>
 <nav>
     <ul>
         <li><a href="/" class="<%= navLocation == 'main' ? 'active' : ''%>">Strona główna</a></li>
+        <% if (loggedUser) {%>
         <li><a href="/players" class="<%= navLocation == 'player' ? 'active' : ''%>">Gracze</a></li>
+        <% } %>
         <li><a href="/playingfields" class="<%= navLocation == 'playingField' ? 'active' : ''%>">Obiekty sportowe</a></li>
         <li><a href="/events" class="<%= navLocation == 'event' ? 'active' : ''%>">Event</a></li>
     </ul>
