--- a/tin-projekt-wierzbicki-s9405/views/pages/player/list.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/pages/player/list.ejs
@@ -20,7 +20,7 @@
                             <ul class="list-actions">
                                 <li><a href="/players/details/<%=player._id%>" class="list-actions-button-details">Szczegóły</a></li>
                                 <li><a href="/players/edit/<%=player._id%>" class="list-actions-button-edit">Edytuj</a></li>
-                                <li><a href="/players/delete/<%=player._id%>" class="list-actions-button-delete">Usuń</a></li>
+                                <li><a href="/players/delete/<%=player._id%>" class="list-actions-button-delete" onclick="return confirm('Czy chcesz usunąć?')">Usuń</a></li>
                             </ul>
                         </td>
                     </tr>
