--- a/tin-projekt-wierzbicki-s9405/views/pages/event/list.ejs
+++ b/tin-projekt-wierzbicki-s9405/views/pages/event/list.ejs
@@ -1,4 +1,11 @@
 <%- include('../../fragments/header.ejs') %>
+<script>
+    function confirmAlert() {
+        if (confirm("<%= __('event.list.deleteConfirm') %>")){
+            alert("<%= __('event.list.deleteAlert') %>");
+        }
+    }
+</script>
     <main>
         <h2><%= __('event.list.pageTitle') %></h2>
         <table class="table-list">
@@ -26,7 +33,7 @@
                                 <ul class="list-actions">
                                     <li><a href="/events/details/<%=event._id%>" class="list-actions-button-details"><%= __('list.actions.details') %></a></li>
                                     <li><a href="/events/edit/<%=event._id%>" class="list-actions-button-edit"><%= __('list.actions.edit')%></a></li>
-                                    <li><a href="/events/delete/<%=event._id%>" class="list-actions-button-delete" onclick="return confirm('Czy chcesz usunąć?')"><%= __('list.actions.delete')%></a></li>
+                                    <li><a href="/events/delete/<%=event._id%>" class="list-actions-button-delete" onclick="confirmAlert()"><%= __('list.actions.delete') %></a></li>
                                 </ul>
                             </td>
                             <% } %>
